--- a/css/style_detail.css
+++ b/css/style_detail.css
@@ -101,6 +101,10 @@ img{
     color: #fff;
     font-size: 1rem;
     border: none;
+    text-decoration: none;
+}
+.btn:hover{
+    opacity:0.8;
 }
 .product-detail ul{
     margin: 1rem 0;
