--- a/css/home.css
+++ b/css/home.css
@@ -3,7 +3,8 @@
   font-family: "Changa", sans-serif;
   padding: 0;
   margin: 0;
-  top: 0;
+  
+  font-size: medium;
 }
 
 .bg-img {
@@ -12,7 +13,7 @@
 }
 
 #nav {
-  background-color: #2d2d2d82;
+  background-color: #2d2d2d54;
 }
 
 .sign-in:hover {
@@ -23,23 +24,15 @@
 }
 .form-filter {
   background-color: rgba(0, 0, 0, 0.644);
-  width: 75%;
-  height: 10%;
-  padding-left: 1rem;
-  padding-right: 1rem;
-  border-radius: 4px;
-  margin-left: 7rem;
-  display: block;
-  margin: 8rem auto;
+ 
+  
 }
 
 input ,select, option {
   border-radius: 2px;
   border: none;
   outline: none;
-  padding: 3px;
-  width: 12rem;
-  height: 2.4rem;
+gap :3%;
 }
 
 label span {
@@ -48,23 +41,19 @@ label span {
   color: #fff;
 }
 
-body {
-  background: #f9f9f9;
-  font-size: 16px;
-  font-family: "changa", sans-serif;
-}
+.cards{ 
 
-.cards {
   display: flex;
   flex-direction: row;
   justify-content: center;
   flex-wrap: wrap;
-}
+
+  gap: 5%;}
 
 .title {
-  color: #1a1a1a;
+  color: #1a1a1ac5;
   text-align: center;
-  margin-bottom: 10px;
+  margin-bottom: 10px
 }
 .content {
   position: relative;
@@ -83,6 +72,7 @@ body {
   bottom: 0;
   right: 0;
   opacity: 0;
+ 
   -webkit-transition: all 0.4s ease-in-out 0s;
   -moz-transition: all 0.4s ease-in-out 0s;
   transition: all 0.4s ease-in-out 0s;
@@ -90,13 +80,15 @@ body {
 .content:hover .content-overlay {
   opacity: 1;
 }
-.content-image {
-  width: 100%;
-}
-img {
-  box-shadow: 1px 1px 5px 1px rgba(0, 0, 0, 0.1);
-  border-radius: 5px;
-}
+ .content-image {
+ 
+width: 100%;
+
+
+
+
+} 
+
 .content-details {
   position: absolute;
   text-align: center;
@@ -120,6 +112,7 @@ img {
 }
 .card{
   margin-bottom: 2rem;
+
 }
 .content-details h3 {
   color: #fff;
@@ -135,121 +128,21 @@ img {
 .fadeIn-bottom {
   top: 80%;
 }
-
-
-
-
-#md {
-  display: none;
-}
-.cancelbtn {
-background-color: #a394af;
-height: 48px;
-padding: 0 24px 0 16px;
-letter-spacing: .25px;
-border-radius: 24px;
-cursor: pointer;
-color: whitesmoke;
-}
-.content {
-  display: flex;
-  flex-direction: column;
-
-}
-.close{
-  display: flex;
-  font-size: 1.4rem;
-
-  justify-content: flex-end;
-  padding-right: 30px;
-  padding-top: 15px;
-  cursor: pointer;
-  color: rgb(255, 72, 72);
-  font-weight: 800;
-}
-
-.modal-content, .content{
+.modal-content, .content {
   display: block;
   margin: auto;
-  padding: 16px;
   text-align: center;
-  background-color: whitesmoke;
-  width: 50%;
-  border-radius: 30px;
-  margin-bottom: 30px;
-}
-.cont{
-  display: block;
-  margin: auto;
-  padding: 16px;
-  background-color: whitesmoke;
-  width: 50%;
+
   border-radius: 30px;
   margin-bottom: 30px;
 }
 
-h2{
-  font-size: 2rem;
-  margin: 1rem;
-  text-align: center;
-}
-h3{
-  font-size: 1.5rem;
-}
-.cancel{
-  font-size: 1.4rem;
-  margin-left: 2rem;
-}
-p{
-  font-size: 1rem;
-}
-.btns{
-  display: flex;
-  justify-content: end;
-  color:rgb(255, 72, 72);
-  margin: 2rem;
-  
-}
-hr{
-  color: green;
 
-}
-#message h3{
-  margin: 2rem;
-  font-size: 1.4rem;
-  color: #565656;
-}
-.del{
-  color:rgb(255, 122, 122);
-  margin-left: 2rem;
-  font-size: 1.4rem;
 
-}
-.cls{
-  background-color: green;
-  font-size: 1.4rem;
-}
-.modal, .product_info{
-  display: none;
-  position: fixed;
-  z-index: 1;
-  padding-top: 5%; 
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgb(0,0,0);
-  background-color: rgba(0,0,0,0.4);
-}
-#message span{
-  line-height: 2.5;
-  font-size: 1.2rem;
-  word-spacing: 10px;
-}
-#message{
-  text-align: start;
-}
 
-#details{
-  flex-direction: column;
-}
+
+
+
+
+
+ 
